gndf/templates/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    app: mongodb
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
  - name: mongossl
    port: 28017
    targetPort: 28017
  selector:
    app: mongodb
  type: ClusterIP
