gndf/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gndf
  name: api-svc
  labels:
    app: api
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: api
  type: ClusterIP
