gndf/templates/svc_fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-svc
  labels:
    app: "fe"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: "fe"
  type: ClusterIP
