gndf/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gndf-svc
  namespace: gndf
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host:  
    http:
      paths:
      - backend:
          serviceName: api-svc
          servicePort: 80
  - host:  
    http:
      paths:
      - backend:
          serviceName: fe-svc
          servicePort: 80
